# record

include/: CLog.h
lib/: record_dll.lib  record_dlld.lib
libmp3lame/: lame.c  lame.h
record64/: CMakeLists.txt  Config.cpp  Config.h  Config.ini  main.cpp  record64.cpp  record64.h  record64.qrc  record64.ui  record64_1.cpp
record64/ini/: furu_config.ini  pifu_config.ini  rufang_type_config.ini  rutou_config.ini  start_end.ini  tengtong_config.ini  xianti_config.ini  yiye_config.ini
